Visual bugs fixed, scrollbar styling and modals animations

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 5px;
+}
+
+html::-webkit-scrollbar-track {
+    background-color: #d6dddf;
+    
+}
+
+html::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background-color: #454545;
+}
